# solana-memory

./: .colosseum-hackathon-credentials  .eslintrc.js  .gitignore  01-PitchDeck.md  02-OnePager.md  03-TechnicalDocs.md  AGENTS.md  API-v2.md  API.md  ARCHITECTURE.md  AUDIT-REPORT.md  Anchor.toml  BADGES_SYNTAX_LIST.md  BEST-PRACTICES.md  CLEANUP-ANALYSIS.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEMO_SHOT_LIST.md  DEPLOY-GUIDE.md  DEPLOY.md  DEPLOYMENT-STATUS-REPORT.md  EXTENSION-REPORT.md  EXTENSION.md  FINAL_CHECK_REPORT.md  FINAL_REPORT.md  IDENTITY.md  MAINNET-DEPLOYMENT-PACKAGE.md  MAINNET-DEPLOYMENT-REPORT.md  MEMORY.md  NARRATION.md  NARRATION_SCRIPT.txt  PITCH.md  PROJECT_HEALTH_REPORT.md  QUICKREF.md  README.md  README_NEW.md  RELEASE.md  RESEARCH-SUMMARY.md  RESEARCH_AGENDA.md  SECURITY.md  (+40 more)
.github/: pull_request_template.md
.secrets/: MOLTBOOK_SETUP.md  moltbook_credentials.md
agentmemory-solana-agent-kit-plugin/: README.md  STATUS.md  package.json  tsconfig.json
api/: .env.example  README.md  package.json
app/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
archive/: PARTNERSHIP_ANALYSIS.md  PRODUCTION_SCRIPT.md  PRODUCT_UX_OPTIMIZATION.md
demo/: DEMO.md  demo-data.json  demo-scenario.md  identity-binding-demo.ts
docs/: ERC8004-INTEGRATION.md  (+17 more)
programs/agent_memory/: Anchor.toml  Cargo.toml  deploy.sh  deploy.ts  idl.json
programs/agent_memory/src/: error.rs  identity_binding.rs  instructions.rs  lib.rs
proofs/rust-security-poc/: Cargo.toml  README.md  SECURITY_AUDIT_REQUIREMENTS.md
proofs/rust-security-poc/src/: lib.rs
(+347 files in other folders)
