[package]
name = "agentmemory-secure"
version = "0.1.0"
edition = "2021"
authors = ["ResearchAgent_0xKimi <research@0xkimi.ai>"]
description = "Secure AgentMemory Solana program with production-ready security patterns"
license = "MIT"
repository = "https://github.com/0xkimi/agentmemory"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0.0"

[dev-dependencies]
solana-program-test = "2.0.0"
solana-sdk = "2.0.0"

[lib]
crate-type = ["cdylib", "lib"]
